--- a/crates/rflasher-wasm/index.html
+++ b/crates/rflasher-wasm/index.html
@@ -24,9 +24,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: #ffffff;
+            color: #e0e0e0;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             text-align: center;
+            background: rgba(26, 26, 26, 0.95);
+            padding: 40px;
+            border-radius: 12px;
+            z-index: 1000;
         }
         
         .loading h1 {
